--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
         <div>
           <!-- <img [src]="user" alt="user avatar" class="w-12 h-12 rounded-full mb-2 sm:mb-0 mr-3 object-cover inline-block" /> -->
           <h1 class="text-xl md:text-2xl font-bold text-gray-800 dark:text-gray-200">{{ greetingMessage }}</h1>
-          <h1 class="text-xl md:text-2xl font-bold text-gray-800 dark:text-gray-200">{{ user.first_name }}!</h1>
+          <h1 class="text-xl md:text-2xl font-bold text-gray-800 dark:text-gray-200">{{ user.person.first_name }}!</h1>
           <p class="text-gray-600 dark:text-gray-400 text-xs md:text-sm mt-1">Welcome back to your ranch dashboard</p>
         </div>
       </div>
